remove all but c4 + minor ui changes

--- a/research/mxgraph-demo/src/index.html
+++ b/research/mxgraph-demo/src/index.html
@@ -44,6 +44,10 @@
 		  PROTOCOL_MESSAGES: false
 		};
 	</script>
+	<!-- UI config-->
+	<script type="text/javascript" src="./c4ke.config.js"></script>
+
+
 	<script type="text/javascript" src="js/Init.js"></script>
 	<script type="text/javascript" src="./libs/pako/dist/pako_deflate.min.js"></script>
 	<script type="text/javascript" src="deflate/base64.js"></script>
