--- a/research/mxgraph-demo/src/index.html
+++ b/research/mxgraph-demo/src/index.html
@@ -96,6 +96,9 @@
 	<link rel="stylesheet" href="./libs/@fortawesome/fontawesome-free/css/all.min.css">
 	<link rel="stylesheet" href="./libs/toastify-js/src/toastify.css">
 
+	<style>
+		@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+		</style>
 </head>
 <body class="geEditor">
 	<script type="text/javascript">
