--- a/research/mxgraph-demo/src/index.html
+++ b/research/mxgraph-demo/src/index.html
@@ -87,6 +87,8 @@
 	<script type="text/javascript" src="./convergence/js/ShareControls.js"></script>
 	<script type="text/javascript" src="./convergence/js/ConvergenceCollaborationController.js"></script>
 
+	<!-- <script type="text/javascript" src="./libs/plantuml-encoder/dist/plantuml-encoder.js"></script> -->
+
 	<link rel="stylesheet" href="./convergence/styles/presence.css">
 	<link rel="stylesheet" href="./convergence/styles/pointer.css">
 	<link rel="stylesheet" href="./convergence/styles/chat.css">
@@ -176,6 +178,7 @@
 
 	<script type="text/javascript" src="./js/c_ModalEdit.js"></script>
 	<script type="text/javascript" src="./js/c_ExportPuml.js"></script>
+	<script type="text/javascript" src="./js/c_ImportPuml.js"></script>
 	<script type="text/javascript" src="./js/c_Utils.js"></script>
 
 </body>
