--- a/research/mxgraph-demo/src/index.html
+++ b/research/mxgraph-demo/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Convergence mxGraph Demo</title>
+    <title>C4ke.pw diagrams</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="styles/grapheditor.css">
@@ -46,6 +46,7 @@
 	</script>
 	<!-- UI config-->
 	<script type="text/javascript" src="./c4ke.config.js"></script>
+	<script type="text/javascript" src="./c4ke.view.config.js"></script>
 
 
 	<script type="text/javascript" src="js/Init.js"></script>
