fix modal focus

--- a/research/mxgraph-demo/src/index.html
+++ b/research/mxgraph-demo/src/index.html
@@ -163,7 +163,7 @@
 	</script>
 
 	<!-- Edit Modal -->
-	<div id="EditModal" class="modal">
+	<div id="EditModal" class="modal" role="dialog" style="display:none;">
 		<div class="modal-content">
 			<span class="close" id="closeEditModal">&times;</span>
 			<p><b>Edit attributes:</b></p>
