add sidebar style

--- a/research/mxgraph-demo/src/open.html
+++ b/research/mxgraph-demo/src/open.html
@@ -191,7 +191,7 @@
 			supportedText.innerHTML = window.parent.mxResources.get('openSupported');
 			var form = window.openForm || document.getElementById('openForm');
 
-			form.setAttribute('action', window.parent.OPEN_URL);
+			// form.setAttribute('action', window.parent.OPEN_URL);
 		}
 	};
 </script>
