--- a/research/mxgraph-demo/src/index.html
+++ b/research/mxgraph-demo/src/index.html
@@ -87,6 +87,10 @@
 	<script type="text/javascript" src="./convergence/js/ChatControl.js"></script>
 	<script type="text/javascript" src="./convergence/js/ShareControls.js"></script>
 	<script type="text/javascript" src="./convergence/js/ConvergenceCollaborationController.js"></script>
+	<script type="module">
+		import { minidenticonSvg } from './libs/minidenticons/minidenticons.min.js'
+	</script>
+
 
 	<link rel="stylesheet" href="./convergence/styles/presence.css">
 	<link rel="stylesheet" href="./convergence/styles/pointer.css">
@@ -96,12 +100,324 @@
 
 	<link rel="stylesheet" href="./libs/@fortawesome/fontawesome-free/css/all.min.css">
 	<link rel="stylesheet" href="./libs/toastify-js/src/toastify.css">
-
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
-		</style>
+	</style>
+
+	<script src="./libs/@convergence/html-text-collab-ext/dist/umd/html-text-collab-ext.js"></script>
+
+	<!-- Bootstrap core CSS -->
+    <link href="./libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+
+	<style>
+		.navbar .form-control {
+        padding: .75rem 1rem;
+        border-width: 0;
+        border-radius: 0;
+      }
+
+      .form-control-dark {
+        color: #fff;
+        background-color: rgba(255, 255, 255, .1);
+        border-color: rgba(255, 255, 255, .1);
+      }
+
+      .form-control-dark:focus {
+        border-color: transparent;
+        box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+      }
+
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+
+	  .sidebar .nav-link {
+		font-weight: 500;
+		color: #d5cccc;
+		}
+
+		.sidebar:hover .nav-link:hover {
+		font-weight: 500;
+		color: #51abef;
+		}
+
+		.sidebar .nav-link .feather {
+		margin-right: 4px;
+		color: #d5cccc;
+		}
+
+		.sidebar .nav-link.active {
+		color: #2470dc;
+		}
+
+		.sidebar .nav-link:hover .feather,
+		.sidebar .nav-link.active .feather {
+		color: inherit;
+		}
+
+		.sidebar-heading {
+		font-size: .75rem;
+		text-transform: uppercase;
+		}
+	</style>
+	<!-- Custom styles for this template -->
+    <link href="styles/sidebars.css" rel="stylesheet">
 </head>
 <body class="geEditor">
+	<header class="navbar navbar-dark sticky-top bg-dark navbar-expand-lg flex-md-nowrap p-0 shadow">
+		<a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 py-2" href="#">C4ke.pw</a>
+		<!-- <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search"> -->
+		<ul class="navbar-nav">
+		  <li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+			  File
+			</a>
+			<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+			  <li><a class="dropdown-item" href="?" target="_blank">New</a></li>
+			  <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Open</a></li>
+			  <li><a class="dropdown-item" href="#">Save</a></li>
+			  <li><a class="dropdown-item" href="#">Export</a></li>
+			</ul>
+		  </li>
+		</ul>
+	  </header>
+
+
+
+	
+<main style="min-height: calc(100vh - 24px); max-height: calc(100vh - 24px); margin-top: -24px;">
+        
+	<div class="d-flex sidebar flex-column flex-shrink-0 p-3 text-white bg-dark col-2 col-lg-2 col-md-3">
+	  <!-- <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+		<svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+		<span class="fs-4">Sidebar</span>
+	  </a> -->
+	  <!-- <hr> -->
+	  <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+		<span>Panels</span>
+	  </h6>
+	  <ul class="nav flex-column">
+		<li class="nav-item">
+		  <a class="nav-link" id="searchLink" href="#" onclick="toggleSearch(this)">
+			<span data-feather="search"></span>
+			Search panel
+		  </a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="#"  id="markdownLink" onclick="toggleMarkdown(this)">
+			<span data-feather="file-text"></span>
+			Markdown panel
+		  </a>
+		</li>
+	  </ul>
+
+	  <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+		<span>My projects</span>
+		<a class="link-secondary" href="#" aria-label="Add a new report">
+		  <span data-feather="plus-circle"></span>
+		</a>
+	  </h6>
+	  <ul class="nav nav-pills flex-column mb-auto">
+		<li class="nav-item">
+		  <a class="nav-link" href="#">
+			<span data-feather="file-text"></span>
+			Adminio arch
+		  </a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="#">
+			<span data-feather="file-text"></span>
+			zexporter-3000
+		  </a>
+		</li>
+	  </ul>
+	  <!-- <ul class="nav nav-pills flex-column mb-auto">
+		<li class="nav-item">
+		  <a href="#" class="nav-link active" aria-current="page">
+			<svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
+			Home
+		  </a>
+		</li>
+		<li>
+		  <a href="#" class="nav-link text-white">
+			<svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
+			Dashboard
+		  </a>
+		</li>
+		<li>
+		  <a href="#" class="nav-link text-white">
+			<svg class="bi me-2" width="16" height="16"><use xlink:href="#table"/></svg>
+			Orders
+		  </a>
+		</li>
+		<li>
+		  <a href="#" class="nav-link text-white">
+			<svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
+			Products
+		  </a>
+		</li>
+		<li>
+		  <a href="#" class="nav-link text-white">
+			<svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+			Customers
+		  </a>
+		</li>
+	  </ul> -->
+  
+	  
+	  <hr/>
+	  <div id="gePresenceContainer" style="max-height: 200px; overflow-y: scroll; overflow-x: hidden;">
+	
+	  </div>
+	  <hr/>
+	  <div id="SocialLinks" class="row text-center">
+		<div id="ChatContainer" class="col text-center" title="Chat with other participants"></div>
+		<div id="ShareControl" class="col text-center"></div>
+	  </div>
+	</div>
+
+
+
+	
+
+	<div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-white col-2 col-sm-4 col-md-4 col-lg-2" id="searchMDcontainer" style="padding-bottom: 40px; padding-top: 40px; overflow-y: scroll;">
+	  <div id="searchBox" style="display: block;">
+	  <!-- <a href="/" class="d-flex align-items-center flex-shrink-0 p-3 link-dark text-decoration-none border-bottom">
+		<svg class="bi me-2" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
+		<span class="fs-5 fw-semibold">List group</span>
+	  </a> -->
+	  <div style="position: absolute; z-index: 99999; margin-top: -16px; background-color: white; width: 287px;">
+	  	<input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
+	  </div>
+	  <div class="list-group list-group-flush border-bottom scrollarea" style="padding-top: 24px;">
+		<a href="#" class="list-group-item list-group-item-action active py-3 lh-tight" aria-current="true">
+		  <div class="d-flex w-100 align-items-center justify-content-between">
+			<strong class="mb-1">List group item heading</strong>
+			<small>Wed</small>
+		  </div>
+		  <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
+		</a>
+		<a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
+		  <div class="d-flex w-100 align-items-center justify-content-between">
+			<strong class="mb-1">List group item heading</strong>
+			<small class="text-muted">Tues</small>
+		  </div>
+		  <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
+		</a>
+		<a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
+		  <div class="d-flex w-100 align-items-center justify-content-between">
+			<strong class="mb-1">List group item heading</strong>
+			<small class="text-muted">Mon</small>
+		  </div>
+		  <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
+		</a>
+  
+		<a href="#" class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
+		  <div class="d-flex w-100 align-items-center justify-content-between">
+			<strong class="mb-1">List group item heading</strong>
+			<small class="text-muted">Wed</small>
+		  </div>
+		  <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
+		</a>
+		<a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
+		  <div class="d-flex w-100 align-items-center justify-content-between">
+			<strong class="mb-1">List group item heading</strong>
+			<small class="text-muted">Tues</small>
+		  </div>
+		  <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
+		</a>
+		<a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
+		  <div class="d-flex w-100 align-items-center justify-content-between">
+			<strong class="mb-1">List group item heading</strong>
+			<small class="text-muted">Mon</small>
+		  </div>
+		  <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
+		</a>
+		<a href="#" class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
+		  <div class="d-flex w-100 align-items-center justify-content-between">
+			<strong class="mb-1">List group item heading</strong>
+			<small class="text-muted">Wed</small>
+		  </div>
+		  <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
+		</a>
+		<a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
+		  <div class="d-flex w-100 align-items-center justify-content-between">
+			<strong class="mb-1">List group item heading</strong>
+			<small class="text-muted">Tues</small>
+		  </div>
+		  <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
+		</a>
+		<a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
+		  <div class="d-flex w-100 align-items-center justify-content-between">
+			<strong class="mb-1">List group item heading</strong>
+			<small class="text-muted">Mon</small>
+		  </div>
+		  <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
+		</a>
+		<a href="#" class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
+		  <div class="d-flex w-100 align-items-center justify-content-between">
+			<strong class="mb-1">List group item heading</strong>
+			<small class="text-muted">Wed</small>
+		  </div>
+		  <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
+		</a>
+		<a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
+		  <div class="d-flex w-100 align-items-center justify-content-between">
+			<strong class="mb-1">List group item heading</strong>
+			<small class="text-muted">Tues</small>
+		  </div>
+		  <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
+		</a>
+		<a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
+		  <div class="d-flex w-100 align-items-center justify-content-between">
+			<strong class="mb-1">List group item heading</strong>
+			<small class="text-muted">Mon</small>
+		  </div>
+		  <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
+		</a>
+
+	  </div>
+	  </div>
+
+	  <div  id="mdBox" style="display: none;">
+		<textarea id="my-text-area">
+# Welcome to EasyMDE!
+
+Type some **markdown** here to get started.
+		</textarea>
+	  </div>
+	  
+	</div>
+
+
+
+
+	<div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-white col-6 col-lg-8 col-md-6"  id="drawBox"  >
+		<div id="diagramContainer" style="min-height: calc(100vh - 48px); max-height: calc(100vh - 48px); padding-bottom: 15px;"></div>
+	</div>
+
+
+<h1 class="visually-hidden">Sidebars examples</h1>
+
+
+
+
+
+
+</main>
+
+
+
 	<script type="text/javascript">
 		// Extends EditorUi to update I/O action states based on availability of backend
 		(function()
@@ -162,6 +478,9 @@
 		})();
 	</script>
 
+	<!-- <textarea id="MarkDownContainer">
+	</textarea> -->
+
 	<!-- Edit Modal -->
 	<div id="EditModal" class="modal" role="dialog" style="display:none;">
 		<div class="modal-content">
@@ -180,6 +499,20 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- ADR Modal -->
+	<!-- <div id="ADRModal" class="modal" role="dialog" style="display:none;">
+		<div class="modal-content">
+			<span class="close" id="closeADRModal">&times;</span>
+			<p>&nbsp;</p>
+			<form onsubmit="event.preventDefault();">
+				<div id="content"></div>
+				<div id="ADRModalContent"><textarea rows="4" id="ADRModalText" style="line-height: 1;"></textarea></div>
+				<input type="submit" value="Save" id="ADRModalSaveButton">
+			</form>
+		</div>
+	</div> -->
+
 
 	<!-- Open Modal -->
 	<div id="OpenModal" class="modal" role="dialog" style="display:none;">
@@ -211,6 +544,53 @@
 	<script type="text/javascript" src="./js/c_ExportPuml.js"></script>
 	<script type="text/javascript" src="./js/c_ImportPuml.js"></script>
 	<script type="text/javascript" src="./js/c_Utils.js"></script>
+
+	<script src="./libs/bootstrap/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" crossorigin="anonymous"></script>
+    <script>
+
+        (function () {
+        'use strict'
+
+        feather.replace({ 'aria-hidden': 'true' })
+
+        
+        })()
+
+    </script>
+
+	
+	<!-- <script src="./libs/tiny-markdown-editor/dist/tiny-mde.min.js"></script>
+	<link rel="stylesheet" href="./libs/tiny-markdown-editor/dist/tiny-mde.min.css">
+
+	<script type="text/javascript">
+		var tinyMDE = new TinyMDE.Editor({textarea: 'ADRModalText'});
+	</script> -->
+
+	<!-- <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> -->
+	<!-- <script>
+		document.getElementById('content').innerHTML =
+		  	marked.parse(document.getElementById('ADRModalText').value);
+		document.getElementById('ADRModalText').addEventListener('change',() => {
+			document.getElementById('content').innerHTML =
+		  	marked.parse(document.getElementById('ADRModalText').value);
+		})
+		
+	  </script> -->
+
+	<!-- <script type="text/javascript" src="js/example.js"></script> -->
+
+
+	<!-- <link rel="stylesheet" href="./libs/easymde/dist/easymde.min.css"> -->
+	<!-- <script src="./libs/easymde/dist/easymde.min.js"></script> -->
+	<!-- <script>
+		const easyMDE = new EasyMDE({ element: $(".ADRModalText")[0],forceSync: true });
+	</script> -->
+	<!-- <script>
+		easyMDE.codemirror.on("change", () => {
+    console.log(easyMDE.value());
+});
+	</script> -->
 
 </body>
 </html>
