fix user dropdown

--- a/research/mxgraph-demo/src/index.html
+++ b/research/mxgraph-demo/src/index.html
@@ -276,7 +276,7 @@
   
 	  
 	  <hr/>
-	  <div id="gePresenceContainer" style="max-height: 200px; overflow-y: scroll; overflow-x: hidden;">
+	  <div id="gePresenceContainer" style="max-height: 300px; min-height: 220px; overflow-y: scroll; overflow-x: hidden;">
 	
 	  </div>
 	  <hr/>
