add new methods

--- a/research/mxgraph-demo/src/index.html
+++ b/research/mxgraph-demo/src/index.html
@@ -174,10 +174,10 @@
     <link href="styles/sidebars.css" rel="stylesheet">
 </head>
 <body class="geEditor">
-	<header class="navbar navbar-dark sticky-top bg-dark navbar-expand-lg flex-md-nowrap p-0 shadow">
-		<a class="navbar-brand col-3 col-md-3 col-lg-2 me-0 px-3 py-2" href="#">C4ke.pw</a>
-		<!-- <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search"> -->
+	<header class="navbar navbar-dark sticky-top bg-dark navbar-expand-lg flex-md-nowrap p-0 shadow" style="z-index: 7;">
+		<a class="navbar-brand col-3 col-md-3 col-lg-2 me-0 px-3 py-2" href="#">c4ke/pw</a>
 		
+		<!-- <input class="form-control form-control w-25" type="text" placeholder="Search" aria-label="Search"> -->
 		<ul class="navbar-nav">
 			<div id="geMenubarContainer"></div>
 		</ul>
@@ -194,11 +194,11 @@
 		<span class="fs-4">Sidebar</span>
 	  </a> -->
 	  <!-- <hr> -->
-	  <div class="input-group mb-2" style="z-index: 9999;padding-top: 10px;">
+	  <div class="input-group mb-2" style="z-index: 7;padding-top: 10px;">
 		<input type="text" class="form-control" placeholder="Search" id="search-input" aria-label="Search" aria-describedby="button-search">
 		<button class="btn btn-light" type="button" id="button-search"><i class="fas fa-search"></i></button>
 	  </div>
-	  <div id="search-results" style="box-shadow: 2px 0 0 2px rgba(204,204,204,.35); display: none; border-radius: 10px; background: #eeeeee; margin-top: 9px; width:500px; height:700px; z-index: 9888; position: absolute;">
+	  <div id="search-results" style="box-shadow: 2px 0 0 2px rgba(204,204,204,.35); display: none; border-radius: 10px; background: #eeeeee; margin-top: 9px; width:500px; height:700px; z-index: 6; position: absolute;">
 		<div class="container" style="color: #000;">
 			<div class="row">
 			  <div class="col" style="padding-top: 45px;">
