--- a/research/mxgraph-demo/src/index.html
+++ b/research/mxgraph-demo/src/index.html
@@ -78,6 +78,18 @@
 			validateAuthInResponse(adata)
 		}
 
+		function getUserProjects(){
+			return $.ajax({
+				type: "GET",
+				url: KkeConfig.BACKEND_BASE_API_URL+"/users/projects",
+				xhrFields: {
+					withCredentials: true
+				},
+				cache: false,
+				async: false
+			}).responseJSON;
+		}
+
 		(function(){
 			checkAuthStatus();
 		})()
@@ -338,32 +350,32 @@
 		</div>
 	  </div>
 	  <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-		<span>Panels</span>
+		<span style="color:#d5cccc;">Panels:</span>
 	  </h6>
 	  <ul class="nav flex-column">
 		<li class="nav-item">
-		  <a class="nav-link" href="#"  id="markdownLink" onclick="toggleMarkdown(this)">
-			<span data-feather="file-text"></span>
-			Markdown panel (ADR)
+		  <a class="nav-link thin-font" href="#"  id="markdownLink" onclick="toggleMarkdown(this)">
+			<span data-feather="edit"></span>
+			ADR Panel
 		  </a>
 		</li>
 	  </ul>
-
+	  <hr/>
 	  <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-		<span>My projects</span>
-		<a class="link-secondary" href="#" aria-label="Add a new report">
-		  <span data-feather="plus-circle"></span>
+		<span style="color:#d5cccc;">projects:</span>
+		<a class="nav-link" href="#" aria-label="Add a new project" title="Add a new project">
+		  <span data-feather="folder-plus"></span>
 		</a>
 	  </h6>
 	  <ul class="nav nav-pills flex-column mb-auto">
 		<li class="nav-item">
-		  <a class="nav-link" href="#">
+		  <a class="nav-link thin-font" href="#">
 			<span data-feather="file-text"></span>
 			Adminio arch
 		  </a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="#">
+		  <a class="nav-link thin-font" href="#">
 			<span data-feather="file-text"></span>
 			zexporter-3000
 		  </a>
@@ -421,9 +433,21 @@
 	<div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-white col-0 col-lg-0 col-md-0" id="MDcontainer" style="display: none; padding-top: 24px;">
 	  <div  id="mdBox" style="display: none; overflow-y: scroll;">
 		<textarea id="my-text-area">
-# Welcome to EasyMDE!
+# ADR N: brief decision title 
+Describe here the forces that influence the design decision, including technological, cost-related, and project local. 
 
-Type some **markdown** here to get started.
+## Decision 
+Describe here our response to these forces, that is, the design decision that was made. State the decision in full sentences, with active voice ("We will...").
+
+## Rationale 
+Describe here the rationale for the design decision. Also indicate the rationale for significant *rejected* alternatives. This section may also indicate assumptions, constraints, requirements, and results of evaluations and experiments.
+
+## Status
+[Proposed | Accepted | Deprecated | Superseded]
+If deprecated, indicate why. If superseded, include a link to the new ADR. 
+
+## Consequences
+Describe here the resulting context, after applying the decision. All consequences should be listed, not just the "positive" ones. 
 		</textarea>
 	  </div>
 	  
